Lilac: Create `Gene` class, and refactor code to use this class instead of hard-coded strings.