@@ -1,8 +1,13 @@
 package com.hartwig.hmftools.lilac.variant;
 
-import static com.hartwig.hmftools.lilac.GeneCache.longGeneName;
 import static com.hartwig.hmftools.lilac.LilacConfig.LL_LOGGER;
 import static com.hartwig.hmftools.lilac.ReferenceData.GENE_CACHE;
+
+import java.io.IOException;
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
@@ -12,15 +17,11 @@ import com.hartwig.hmftools.lilac.LilacConfig;
 import com.hartwig.hmftools.lilac.coverage.AlleleCoverage;
 import com.hartwig.hmftools.lilac.coverage.ComplexCoverage;
 import com.hartwig.hmftools.lilac.hla.HlaAllele;
-
-import java.io.IOException;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import com.hartwig.hmftools.lilac.hla.HlaGene;
 
 public class CopyNumberAssignment
 {
-    private final Map<String,List<CopyNumberData>> mSampleCopyNumberData;
+    private final Map<String, List<CopyNumberData>> mSampleCopyNumberData;
 
     public CopyNumberAssignment()
     {
@@ -35,10 +36,10 @@ public class CopyNumberAssignment
         try
         {
             List<GeneCopyNumber> hlaGeneCopyNumbers = GeneCopyNumberFile.read(config.CopyNumberFile).stream()
-                    .filter(x -> GENE_CACHE.GeneNames.contains(x.geneName())).collect(Collectors.toList());
+                    .filter(x -> GENE_CACHE.GeneNames.contains(HlaGene.fromString(x.geneName()))).toList();
 
             List<CopyNumberData> cnDataList = hlaGeneCopyNumbers.stream()
-                    .map(x -> new CopyNumberData(x.geneName(), x.minCopyNumber(), x.minMinorAlleleCopyNumber()))
+                    .map(x -> new CopyNumberData(HlaGene.fromString(x.geneName()), x.minCopyNumber(), x.minMinorAlleleCopyNumber()))
                     .collect(Collectors.toList());
 
             mSampleCopyNumberData.put(config.Sample, cnDataList);
@@ -83,12 +84,12 @@ public class CopyNumberAssignment
             AlleleCoverage tumorCoverage1 = tumorCoverage.getAlleleCoverage().get(index);
             AlleleCoverage tumorCoverage2 = tumorCoverage.getAlleleCoverage().get(index + 1);
 
-            String gene = longGeneName(refCoverage1.Allele.Gene);
-            CopyNumberData cnData = cnDataList.stream().filter(x -> x.Gene.equals(gene)).findFirst().orElse(null);
+            HlaGene gene = refCoverage1.Allele.Gene;
+            CopyNumberData cnData = cnDataList.stream().filter(x -> x.Gene == gene).findFirst().orElse(null);
 
             if(cnData == null)
             {
-                LL_LOGGER.warn("missing gene({}) copy number data", gene);
+                LL_LOGGER.warn("missing gene({}) copy number data", gene.toString());
                 copyNumbers.add(0.0);
                 copyNumbers.add(0.0);
                 continue;
